# orbit

./: .env.example  .gitignore  Atlas_en_mac_v2_2_0.ppn  Readme.md  ai.py  atlas.ppn  audio_satelite.py  hotword_detect.py  install.sh  main.py  pyproject.toml  requirements.txt  run.sh  speech.py  texttospeech.py
characters/: atlas.json  auto.json  extract.json  function.json  luna.json  mentor.json
data/: commands.jsonl  functions.jsonl
prompts/: v1  v2  v3.md  v4.md
src/: ai.py  ai_legacy.py  app_config.py  audio.py  audio_satelite.py  commands.py  env.py  helpers.py  hotword_detect.py  kobold.py  llm.py  main.py  mqtt.py  ollama.py  similarity_search.py  speak.py  speech_to_text.py  text_to_speech.py  threads.py
src/ai/: kobold.py  llm.py  ollama.py
src/intent/: classify.py  expand_data.py  intents.txt  sequence_tags.csv  train.py
src/intent/ludwig/: config-bert.yaml  config.yaml  predict.py  sequence_tags.csv
wakewords/: atlas_en_windows_v2_2_0.ppn  orbit_en_mac_v2_2_0.ppn
